feat: enhance SEO with meta tags, structured data, and semantic HTML

--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.jpg?v=2" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#020403" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ITOPAN | Takamasa Ito</title>
+  <title>ITOPAN | 伊藤貴將 - Developer & Creator Portfolio</title>
+  <meta name="description"
+    content="長野・北アルプス山麓を拠点に、生成AIを前提としたものづくりとワークフローの設計に取り組む伊藤貴將（イトパン）のポートフォリオ。コード、デザイン、映像を横断したクリエイティブを公開中。" />
+  <meta name="keywords" content="伊藤貴將, イトパン, ITOPAN, ポートフォリオ, 生成AI, 映像制作, 開発, 長野, 北アルプス, アニミズム" />
+  <meta name="author" content="伊藤貴將 (Takamasa Ito)" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://itopan.jp/" />
+  <meta property="og:title" content="ITOPAN | 伊藤貴將 - Developer & Creator Portfolio" />
+  <meta property="og:description" content="生成AIと自然、技術と精神を繋ぐクリエイティブ。伊藤貴將（イトパン）のポートフォリオサイト。" />
+  <meta property="og:image" content="https://itopan.jp/favicon.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://itopan.jp/" />
+  <meta property="twitter:title" content="ITOPAN | 伊藤貴將 - Developer & Creator Portfolio" />
+  <meta property="twitter:description" content="生成AIと自然、技術と精神を繋ぐクリエイティブ。伊藤貴將（イトパン）のポートフォリオサイト。" />
+  <meta property="twitter:image" content="https://itopan.jp/favicon.jpg" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "伊藤貴將",
+      "alternateName": "イトパン",
+      "url": "https://itopan.jp/",
+      "image": "https://itopan.jp/favicon.jpg",
+      "sameAs": [
+        "https://x.com/takamasa045",
+        "https://note.com/azumimusuhi"
+      ],
+      "jobTitle": "Developer & Creator",
+      "description": "長野・北アルプス山麓を拠点に、生成AIを前提としたものづくりとワークフローの設計に取り組んでいます。"
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://itopan.jp/",
+      "name": "ITOPAN",
+      "description": "伊藤貴將（イトパン）のポートフォリオサイト。"
+    }
+  </script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-589FJ5ZFHW"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-589FJ5ZFHW');
